// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extends a style with a customStyle 1`] = `
<View
  style={
    Array [
      Object {
        "borderLeftColor": "#eee",
        "borderLeftWidth": 4,
        "borderStyle": "solid",
        "marginBottom": 22,
        "marginTop": 22,
        "paddingLeft": 12,
      },
      undefined,
    ]
  }
>
  <View />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontStyle": "italic",
          "fontWeight": "normal",
          "marginLeft": 16,
        },
        Object {
          "textAlign": undefined,
        },
        Object {
          "fontSize": 18,
          "fontWeight": "normal",
          "letterSpacing": -0.75,
          "lineHeight": 32,
        },
      ]
    }
  >
    Hello World
  </Text>
  <View />
</View>
`;

exports[`renders correctly with a blockquote 1`] = `
<View
  style={
    Array [
      Object {
        "borderLeftColor": "#eee",
        "borderLeftWidth": 4,
        "borderStyle": "solid",
        "marginBottom": 22,
        "marginTop": 22,
        "paddingLeft": 12,
      },
      undefined,
    ]
  }
>
  <View />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontStyle": "italic",
          "fontWeight": "normal",
          "marginLeft": 16,
        },
        Object {
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hello World
  </Text>
  <View />
</View>
`;

exports[`renders null without a blockquote 1`] = `
<View
  style={
    Array [
      Object {
        "borderLeftColor": "#eee",
        "borderLeftWidth": 4,
        "borderStyle": "solid",
        "marginBottom": 22,
        "marginTop": 22,
        "paddingLeft": 12,
      },
      undefined,
    ]
  }
>
  <View />
  <View />
</View>
`;
